translated AttractionDetails etc.

--- a/lib/Locale/intl_en.arb
+++ b/lib/Locale/intl_en.arb
@@ -1,19 +1,77 @@
 {
-  "title": "Location Advisor",
-  "@title": {
-    "description": "Title for the Demo application",
-    "type": "text"
-  },
-  "restaurants": "Restaurants",
-  "@restaurants": {
-    "description": "Restaurants",
-    "type": "text",
-    "placeholders": {}
-  },
-  "locationsSearchBarHintText": "Name of cities, districts, places, etc…",
-  "@locationsSearchBarHintText": {
-    "description": "Name of cities, districts, places, etc…",
-    "type": "text",
-    "placeholders": {}
-  }
+	"@@last_modified": "2020-05-02T17:45:20.572185",
+	"title": "Location Advisor",
+	"@title": {
+		"description": "Title for the Demo application",
+		"type": "text",
+		"placeholders": {}
+	},
+	"restaurants": "Restaurants",
+	"@restaurants": {
+		"description": "Restaurants",
+		"type": "text",
+		"placeholders": {}
+	},
+	"locationsSearchBarHintText": "Name of cities, districts, places, etc…",
+	"@locationsSearchBarHintText": {
+		"description": "Name of cities, districts, places, etc…",
+		"type": "text",
+		"placeholders": {}
+	},
+	"attractions": "Attractions",
+	"@attractions": {
+		"description": "Attractions",
+		"type": "text",
+		"placeholders": {}
+	},
+	"hotels": "Hotels",
+	"@hotels": {
+		"description": "Hotels",
+		"type": "text",
+		"placeholders": {}
+	},
+	"airports": "Airports",
+	"@airports": {
+		"description": "airports",
+		"type": "text",
+		"placeholders": {}
+	},
+	"searching": "Searching...",
+	"@searching": {
+		"description": "searching",
+		"type": "text",
+		"placeholders": {}
+	},
+	"noResultsFound": "No results found",
+	"@noResultsFound": {
+		"description": "noresultsfound",
+		"type": "text",
+		"placeholders": {}
+	},
+	"attractionName": "Matthias Church",
+	"@attractionName": {
+		"type": "text",
+		"placeholders": {}
+	},
+	"attractionDescription": "Used over the centuries as a coronation church for the Hungarian kings, the slender and graceful architecture of this beautiful church dominates the main square of the Castle area.",
+	"@attractionDescription": {
+		"type": "text",
+		"placeholders": {}
+	},
+	"errorOccurred": "Error occurred : {error}",
+	"@errorOccurred": {
+		"description": "Print error message",
+		"type": "text",
+		"placeholders": {
+			"error": {}
+		}
+	},
+	"radius": "Radius {rad} km",
+	"@radius": {
+		"description": "radius",
+		"type": "text",
+		"placeholders": {
+			"rad": {}
+		}
+	}
 }
